# aegis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
docs/: build.md  config.md
examples/: client.json-example  forward.json-example  nat.json-example  server.json-example  trojan.service-example
scripts/: release-linux-amd64.sh
src/core/: config.cpp  config.h  service.cpp
src/session/: serversession.cpp  serversession.h
